# we_business

./: README.md  clear_prompts.ps1
code/backend/: .gitignore  Cargo.toml  build.rs  config.dev.toml
code/frontend/: App.js  app.json  package-lock.json  package.json
code/frontend/src/api/: authApi.js  config.js  taskApi.js
code/frontend/src/components/: EmotionInput.js  EventFeed.js  ResultCard.js
code/frontend/src/hooks/: testNewFile.js  useEmotionAgent.js  useWebSocket.js
code/frontend/src/screens/: CompanyScreen.js  HistoryScreen.js  HomeScreen.js  IdeaScreen.js  LoginScreen.js  PostSquareScreen.js  SettingsScreen.js
